--- a/html/blog-post3.html
+++ b/html/blog-post3.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/blogpages.css">
     <title>Why basketball will be the new "World Game" in 25 years time</title>
 </head>
 <body>
         <nav class="top-nav">
-            <a href="blog.html">&#8592 Back to Blog</a>
-            <a href="index.html">Home</a>
+            <a href="/html/blog.html">&#8592 Back to Blog</a>
+            <a href="/index.html">Home</a>
         </nav>
     <main>
     <section class="blog-article">
-        <img class="blog-image" src="/blog images/basketball.jpg" alt="image of hacker">
+        <img class="blog-image" src="/Images/blog images/basketball.jpg" alt="image of hacker">
         <p class="caption">Photo by <a
                 href="https://unsplash.com/@kaost?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kylie
                 Osullivan</a> on <a
@@ -22,8 +22,8 @@
         </p>
     </section>
 
-    <header><h2>Zoom, Enhance, Arrest</h2></header>
-    <h5>NCIS used such real hacking techniques that the FBI had to get involved in the earlier seasons</h5>
+    <header><h2>The Fastest Growing Sport in Australia Just Keeps Getting Bigger</h2></header>
+    <h5>Andrew Bogut, Patty Mills. Ben Simmons, Matthew Dellavedova. These names have all becoem household names for any Aussie basketball fan. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi temporibus eveniet deleniti quisquam. Veritatis corrupti quis illo voluptatibus, eaque dignissimos tempora odio perferendis adipisci, iure porro dolores asperiores, ipsam molestias.</h5>
 
     </main>
 </body>
