--- a/html/blog-post4.html
+++ b/html/blog-post4.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/blogpages.css">
     <title>Formula 1 "Zero Emissions by 2030" and what this will do for electric car prices</title>
 </head>
 <body>
         <nav class="top-nav">
-            <a href="blog.html">&#8592 Back to Blog</a>
-            <a href="index.html">Home</a>
+            <a href="/html/blog.html">&#8592 Back to Blog</a>
+            <a href="/index.html">Home</a>
         </nav>
     <main>
     <section class="blog-article">
-        <img class="blog-image" src="/blog images/eau rouge.jpg" alt="image of Eau Rouge corner">
+        <img class="blog-image" src="/Images/blog images/eau rouge.jpg" alt="image of Eau Rouge corner">
         <p class="caption">Photo by <a
                 href="https://unsplash.com/@michalw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Michal
                 Wojcik</a> on <a
@@ -22,8 +22,8 @@
         </p>
     </section>
 
-    <header><h2>Zoom, Enhance, Arrest</h2></header>
-    <h5>NCIS used such real hacking techniques that the FBI had to get involved in the earlier seasons</h5>
+    <header><h2>Plug, Charge, Zoom</h2></header>
+    <h5>Formula One has led the way when it comes to self charging batteries. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptatibus facere, voluptate ab similique reiciendis sequi rem iste consequatur modi vitae eum praesentium obcaecati deleniti provident et molestiae tempore recusandae?</h5>
 
     </main>
 </body>
