--- a/html/blog-post5.html
+++ b/html/blog-post5.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/blogpages.css">
     <title>How long until Esports appear at the Olympics and why it's closer than you think</title>
 </head>
 <body>
         <nav class="top-nav">
-            <a href="blog.html">&#8592 Back to Blog</a>
-            <a href="index.html">Home</a>
+            <a href="/html/blog.html">&#8592 Back to Blog</a>
+            <a href="/index.html">Home</a>
         </nav>
     <main>
     <section class="blog-article">
-        <img class="blog-image" src="/blog images/esports.jpg" alt="image of esports workstation">
+        <img class="blog-image" src="/Images/blog images/esports.jpg" alt="image of esports workstation">
         <p class="caption">Photo by <a
                 href="https://unsplash.com/@elladon?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">ELLA
                 DON</a> on <a
@@ -22,8 +22,8 @@
         </p>
     </section>
 
-    <header><h2>Zoom, Enhance, Arrest</h2></header>
-    <h5>NCIS used such real hacking techniques that the FBI had to get involved in the earlier seasons</h5>
+    <header><h2>How Gamers Will Come to Rule the Playground</h2></header>
+    <h5>Esports has already grown incredibly in the past 10 years with League of Legends at the forefront.</h5>
 
     </main>
 </body>
