--- a/html/professional-about-me.html
+++ b/html/professional-about-me.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="/css/projects.css">
     <title>Projects and Experience</title>
 </head>
 <body>
         <header>
             <nav class="top-nav">
-                <a href="index.html">Home</a>
-                <a href="aboutme.html">About Me</a>
-                <a href="blog.html">Blog</a>
-                <a href="contactme.html">Contact Me</a>
+                <a href="/index.html">Home</a>
+                <a href="/html/aboutme.html">About me</a>
+                <a href="/html/blog.html">Blog</a>
+                <a href="/html/contactme.html">Contact Me</a>
             </nav>
         </header>
 
@@ -80,9 +80,9 @@
 
         </section>
         <section id=resume>
-            <a href="Resume - Sam Carter.pdf" target="_blank">View Resume</a>
+            <a href="/resume/Resume - Sam Carter.pdf" target="_blank">View Resume</a>
             <a href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="/Images/linkedin.svg"> </a>
-            <a href="Resume - Sam Carter.pdf" download="Sam Carter - Resume">Download Resume</a>
+            <a download href="/resume/Resume - Sam Carter.pdf" download="Sam Carter - Resume">Download Resume</a>
             
         </section>
     </main>
