--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/home.css">
     <link rel="icon" type="image/svg" href="/Images/Sam-Face.svg">
     <title>Sam Carter Portfolio</title>
 </head>
 <body>
     <header>
         <nav class="top-nav">
-            <a href="professional-about-me.html">Projects</a>
-            <a href="aboutme.html">About me</a>
-            <a href="blog.html">Blog</a>
-            <a href="contactme.html">Contact Me</a>
+            <a href="/html/professional-about-me.html">Projects</a>
+            <a href="/html/aboutme.html">About me</a>
+            <a href="/html/blog.html">Blog</a>
+            <a href="/html/contactme.html">Contact Me</a>
         </nav>
     </header>
     <main>
