--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aboutme.css">
+    <link rel="stylesheet" href="/css/aboutme.css">
     <title>About Me - Sam Carter</title>
 </head>
 <body>
         <nav class="top-nav">
-            <a href="index.html">Home</a>
-            <a href="professional-about-me.html">Projects</a>
-            <a href="blog.html">Blog</a>
-            <a href="contactme.html">Contact Me</a>
+            <a href="/index.html">Home</a>
+            <a href="/html/professional-about-me.html">Projects</a>
+            <a href="/html/blog.html">Blog</a>
+            <a href="/html/contactme.html">Contact Me</a>
         </nav>
     <main>
         <section id="about-me">
