--- a/html/contactme.html
+++ b/html/contactme.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contactme.css">
+    <link rel="stylesheet" href="/css/contactme.css">
     <title>Contact Me - Sam Carter</title>
 </head>
 <body>
     <header>
         <nav class="top-nav">
-            <a href="index.html">Home</a>
-            <a href="professional-about-me.html">Projects</a>
-            <a href="aboutme.html">About me</a>
-            <a href="blog.html">Blog</a>
+            <a href="/index.html">Home</a>
+            <a href="/html/professional-about-me.html">Projects</a>
+            <a href="/html/aboutme.html">About me</a>
+            <a href="/html/blog.html">Blog</a>
         </nav>
     </header>
     <main>
