--- a/html/blog.html
+++ b/html/blog.html
@@ -16,8 +16,8 @@
         </nav>
     <main>
         <section id="blog-header">
-            <header><h2>Welcome to the best damn blog shop in town</h2></header>
-            <img src="/Images/blog images/879094-1.jpg" alt="simpsons image of blog users celebrating">
+            <header><h2>Welcome to the Blog Zone</h2></header>
+            <!-- <img src="/Images/blog images/879094-1.jpg" alt="simpsons image of blog users celebrating"> -->
             <aside id="blog-quote">
                 <p>"Religion, Family, Friendships. These are the three demons you must slay if you wish to
                 succeed in creating a successful blog" - <em>M Burns</em> <small> (kind of)</small></p>
@@ -26,7 +26,7 @@
             <aside id="blog-quote-2">
                 <p>"They say he carved this blog page from a bigger blog page" - Lenford "Lenny" Leonard</p>
             </aside>
-            <h4> Thank you for taking the time to visit my blog. Article topics will be surrounding my hobbies. </h4>
+            <p> Thank you for taking the time to visit my blog. Article topics will be surrounding my hobbies. </p>
         </section>
         <section id="blog-latest">
             <h2>Latest Posts</h2>
