--- a/html/professional-about-me.html
+++ b/html/professional-about-me.html
@@ -21,6 +21,7 @@
         <section id="reviews">
             <h2>Client Reviews</h2>
             <p></p>
+            <!-- p tag is empty due to a keyframe rule that inserts the contect - rolling reviews -->
 
 
         </section>
@@ -35,6 +36,7 @@
                 be able to go out and learn new HTML/CSS techniques and tricks myself. If you don't believe in magic, you may want
                 to avoid hovering your mouse over the following boxes:</p>
         </section>
+        <!-- hover boxes to show CSS effects/animation -->
         <section id="box-container">
             <div>
                 <h4>Rainbow Box</h4>
@@ -50,7 +52,7 @@
             </div>
         </section>
         <section id=past-projects>
-        <h3>Past Projects</h3>
+        <h2>Past Projects</h2>
             <ul>
                 <li>
                     <h4>Band (Muse) Website</h4>
@@ -77,13 +79,12 @@
                     TBC
                 </li>
             </ul>
-
         </section>
+        <!-- resume view and download links -->
         <section id=resume>
             <a href="/resume/Resume - Sam Carter.pdf" target="_blank">View Resume</a>
             <a href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="/Images/linkedin.svg"> </a>
             <a download href="/resume/Resume - Sam Carter.pdf" download="Sam Carter - Resume">Download Resume</a>
-            
         </section>
     </main>
     <footer>
