--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
     </main>
-    <section id="socials">
+    <section class="socials">
         <p>I welcome you to join me on my Web Developement journey</p>
         <div class="logo-container">
             <a class="logo"href="https://www.instagram.com/carter91" target="_blank"> <img src="/Images/instagram-svgrepo-com.svg"> </a>
