--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -25,15 +25,15 @@
         </section>   
         <section id="images">
             <div class="pic-container">
-                <img id="sam-ric" src="/Images/sam-ric.jpg" alt="image of Sam and Daniel Ricciardo">
+                <img id="sam-ric" src="/Images/sam-ric.png" alt="image of Sam and Daniel Ricciardo">
                 <p>2022 Australian Grand Prix with Daniel Ricciardo</p>
             </div>
             <div class="pic-container">
-                <img id="sam-book" src="/Images/sam-book.jpg" alt="image of Sam and Trevor Booker">
+                <img id="sam-book" src="/Images/sam-book.png" alt="image of Sam and Trevor Booker">
                 <p>2014 Washington Wizards vs Boston Celtics NBA Game with Trevor Booker</p>
             </div>
             <div class="pic-container">
-                <img id="sam-t1" src="/Images/sam-t1.jpg" alt="image of Sam and SKT1 Esports Team">
+                <img id="sam-t1" src="/Images/sam-ti.png" alt="image of Sam and SKT1 Esports Team">
                 <p>2016 League of Legends World Championships Group Stage with SKT1</p>
             </div>
         </section>
