fixing src links

--- a/src/html/aboutme.html
+++ b/src/html/aboutme.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/css/aboutme.css">
+    <link rel="stylesheet" href="/css/aboutme.css">
     <title>About Me - Sam Carter</title>
 </head>
 <body>
         <nav class="top-nav">
-            <a href="/src/index.html">Home</a>
-            <a href="/src/html/professional-about-me.html">Projects</a>
-            <a href="/src/html/bloghome.html">Blog</a>
-            <a href="/src/html/contactme.html">Contact Me</a>
+            <a href="/index.html">Home</a>
+            <a href="/html/professional-about-me.html">Projects</a>
+            <a href="/html/bloghome.html">Blog</a>
+            <a href="/html/contactme.html">Contact Me</a>
         </nav>
     <main>
         <section id="about-me">
@@ -25,15 +25,15 @@
         </section>   
         <section id="images">
             <div class="pic-container">
-                <img id="sam-ric" src="/src/images/sam-ric.png" alt="image of Sam and Daniel Ricciardo">
+                <img id="sam-ric" src="images/sam-ric.png" alt="image of Sam and Daniel Ricciardo">
                 <p>2022 Australian Grand Prix with Daniel Ricciardo</p>
             </div>
             <div class="pic-container">
-                <img id="sam-book" src="/src/images/sam-book.png" alt="image of Sam and Trevor Booker">
+                <img id="sam-book" src="images/sam-book.png" alt="image of Sam and Trevor Booker">
                 <p>2014 Washington Wizards vs Boston Celtics NBA Game with Trevor Booker</p>
             </div>
             <div class="pic-container">
-                <img id="sam-t1" src="/src/images/sam-ti.png" alt="image of Sam and SKT1 Esports Team">
+                <img id="sam-t1" src="images/sam-ti.png" alt="image of Sam and SKT1 Esports Team">
                 <p>2016 League of Legends World Championships Group Stage with SKT1</p>
             </div>
         </section>
