--- a/src/html/contactme.html
+++ b/src/html/contactme.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/css/contactme.css">
+    <link rel="stylesheet" href="/css/contactme.css">
     <title>Contact Me - Sam Carter</title>
 </head>
 <body>
     <header>
         <nav class="top-nav">
-            <a href="/src/index.html">Home</a>
-            <a href="/src/html/professional-about-me.html">Projects</a>
-            <a href="/src/html/aboutme.html">About me</a>
-            <a href="/src/html/bloghome.html">Blog</a>
+            <a href="/index.html">Home</a>
+            <a href="/html/professional-about-me.html">Projects</a>
+            <a href="/html/aboutme.html">About me</a>
+            <a href="/html/bloghome.html">Blog</a>
         </nav>
     </header>
     <main>
@@ -69,10 +69,10 @@
         <section class="socials">
         <p>Thank you for reaching out and don't forget to follow me using the below links:</p>
         <div class="logo-container">
-            <a class="logo"href="https://www.instagram.com/carter91" target="_blank"> <img src="/src/src/images/instagram-svgrepo-com.svg"> </a>
-            <a class="logo"href="https://www.twitter.com/CoderCarter" target="_blank"> <img src="/src/src/images/Twitter-logo.svg"> </a>
-            <a class="logo"href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="/src/src/images/linkedin.svg"> </a>
-            <a class="logo"href="https://github.com/s-carter91" target="_blank"> <img src="/src/src/images/github-svgrepo-com.svg"> </a>
+            <a class="logo"href="https://www.instagram.com/carter91" target="_blank"> <img src="/srcimages/instagram-svgrepo-com.svg"> </a>
+            <a class="logo"href="https://www.twitter.com/CoderCarter" target="_blank"> <img src="/srcimages/Twitter-logo.svg"> </a>
+            <a class="logo"href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="/srcimages/linkedin.svg"> </a>
+            <a class="logo"href="https://github.com/s-carter91" target="_blank"> <img src="/srcimages/github-svgrepo-com.svg"> </a>
         </div>
         </section>
     <footer>
