--- a/src/html/professional-about-me.html
+++ b/src/html/professional-about-me.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/css/projects.css">
+    <link rel="stylesheet" href="/css/projects.css">
     <title>Projects and Experience</title>
 </head>
 <body>
         <header>
             <nav class="top-nav">
-                <a href="/src/index.html">Home</a>
-                <a href="/src/html/aboutme.html">About me</a>
-                <a href="/src/html/bloghome.html">Blog</a>
-                <a href="/src/html/contactme.html">Contact Me</a>
+                <a href="/index.html">Home</a>
+                <a href="/html/aboutme.html">About me</a>
+                <a href="/html/bloghome.html">Blog</a>
+                <a href="/html/contactme.html">Contact Me</a>
             </nav>
         </header>
 
@@ -59,15 +59,15 @@
                     <div id="muse-images">
                         <div>
                             <p> Homepage</p>
-                            <img src="/src/images/muse-home.png" alt="image of muse homepage">
+                            <img src="images/muse-home.png" alt="image of muse homepage">
                         </div>
                         <div>
                             <p>Biography Page</p>
-                            <img src="/src/images/muse-bio.png" alt="image of muse biography page">
+                            <img src="images/muse-bio.png" alt="image of muse biography page">
                         </div>
                         <div>
                             <p>Discography Page</p>
-                            <img src="/src/images/muse-disco.png" alt="image of muse discography page">
+                            <img src="images/muse-disco.png" alt="image of muse discography page">
                         </div>
                     </div>
                 </li>
@@ -82,9 +82,9 @@
         </section>
         <!-- resume view and download links -->
         <section id=resume>
-            <a href="/src/resume/Resume - Sam Carter.pdf" target="_blank">View Resume</a>
-            <a href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="/src/images/linkedin.svg"> </a>
-            <a download href="/src/resume/Resume - Sam Carter.pdf" download="Sam Carter - Resume">Download Resume</a>
+            <a href="/resume/Resume - Sam Carter.pdf" target="_blank">View Resume</a>
+            <a href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="images/linkedin.svg"> </a>
+            <a download href="/resume/Resume - Sam Carter.pdf" download="Sam Carter - Resume">Download Resume</a>
         </section>
     </main>
     <footer>
