--- a/src/html/professional-about-me.html
+++ b/src/html/professional-about-me.html
@@ -59,15 +59,15 @@
                     <div id="muse-images">
                         <div>
                             <p> Homepage</p>
-                            <img src="images/muse-home.png" alt="image of muse homepage">
+                            <img src="/images/muse-home.png" alt="image of muse homepage">
                         </div>
                         <div>
                             <p>Biography Page</p>
-                            <img src="images/muse-bio.png" alt="image of muse biography page">
+                            <img src="/images/muse-bio.png" alt="image of muse biography page">
                         </div>
                         <div>
                             <p>Discography Page</p>
-                            <img src="images/muse-disco.png" alt="image of muse discography page">
+                            <img src="/images/muse-disco.png" alt="image of muse discography page">
                         </div>
                     </div>
                 </li>
@@ -83,7 +83,7 @@
         <!-- resume view and download links -->
         <section id=resume>
             <a href="/resume/Resume - Sam Carter.pdf" target="_blank">View Resume</a>
-            <a href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="images/linkedin.svg"> </a>
+            <a href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="/images/linkedin.svg"> </a>
             <a download href="/resume/Resume - Sam Carter.pdf" download="Sam Carter - Resume">Download Resume</a>
         </section>
     </main>
