--- a/src/html/bloghome.html
+++ b/src/html/bloghome.html
@@ -17,7 +17,7 @@
     <main>
         <section id="blog-header">
             <header><h2>Welcome to the Blog Zone</h2></header>
-            <!-- <img src="images/blog images/879094-1.jpg" alt="simpsons image of blog users celebrating"> -->
+            <!-- <img src="/images/blog/images/879094-1.jpg" alt="simpsons image of blog users celebrating"> -->
             <aside id="blog-quote">
                 <p>"Religion, Family, Friendships. These are the three demons you must slay if you wish to
                 succeed in creating a successful blog" - <em>M Burns</em> <small> (kind of)</small></p>
@@ -31,11 +31,11 @@
         <section id="blog-latest">
             <h2>Latest Posts</h2>
             <div id="blog-post">
-                <a href="/html/blog-post1.html"> <img src="images/blog images/hacker.jpg" alt="image of a hacker"><br>1. Hacking tips and tricks 2000s crime shows taught us</a>
-                <a href="/html/blog-post2.html"> <img src="images/blog images/simpsons.jpg" alt="image of simpsons figurines"><br> 2. How to turn your Simpsons meme dreams into reality</a>
-                <a href="/html/blog-post3.html"> <img src="images/blog images/basketball.jpg" alt="image of a basketball"><br> 3. Why basketball will be the new "World Game" in 25 years time</a>
-                <a href="/html/blog-post4.html"> <img src="images/blog images/eau rouge.jpg" alt="image of eau rough corner"><br> 4. Formula One "Zero Emissions by 2030" and what this will do for electric car prices</a>
-                <a href="/html/blog-post5.html"> <img src="images/blog images/esports.jpg" alt="image of esports stations"><br> 5. How long until Esports appear at the Olympics and why it's closer than you think</a>
+                <a href="/html/blog-post1.html"> <img src="/images/blog/images/hacker.jpg" alt="image of a hacker"><br>1. Hacking tips and tricks 2000s crime shows taught us</a>
+                <a href="/html/blog-post2.html"> <img src="/images/blog/images/simpsons.jpg" alt="image of simpsons figurines"><br> 2. How to turn your Simpsons meme dreams into reality</a>
+                <a href="/html/blog-post3.html"> <img src="/images/blog/images/basketball.jpg" alt="image of a basketball"><br> 3. Why basketball will be the new "World Game" in 25 years time</a>
+                <a href="/html/blog-post4.html"> <img src="/images/blog/images/eau rouge.jpg" alt="image of eau rough corner"><br> 4. Formula One "Zero Emissions by 2030" and what this will do for electric car prices</a>
+                <a href="/html/blog-post5.html"> <img src="/images/blog/images/esports.jpg" alt="image of esports stations"><br> 5. How long until Esports appear at the Olympics and why it's closer than you think</a>
             </div>    
         </section>
     </main>
