--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home.css">
-    <link rel="icon" type="image/svg" href="images/Sam-Face.svg">
+    <link rel="icon" type="image/svg" href="/images/Sam-Face.svg">
     <title>Sam Carter Portfolio</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
     <main>
         <section id="self-info">
             <header><h1>Sam Carter</h1></header>
-            <img id="sam-face" src="images/sam-face-3.svg" alt="Sam's face">
+            <img id="sam-face" src="/images/sam-face-3.svg" alt="Sam's face">
             <h4>Junior Web Developer</h4>
             <aside>
                 <p>"Nobody get's to tell you what your story is" - Ana Spanakopita</p>
@@ -38,10 +38,10 @@
     <section class="socials">
         <p>I welcome you to join me on my Web Developement journey</p>
         <div class="logo-container">
-            <a class="logo"href="https://www.instagram.com/carter91" target="_blank"> <img src="images/instagram-svgrepo-com.svg"> </a>
-            <a class="logo"href="https://www.twitter.com/CoderCarter" target="_blank"> <img src="images/Twitter-logo.svg"> </a>
-            <a class="logo"href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="images/linkedin.svg"> </a>
-            <a class="logo"href="https://github.com/s-carter91" target="_blank"> <img src="images/github-svgrepo-com.svg"> </a>
+            <a class="logo"href="https://www.instagram.com/carter91" target="_blank"> <img src="/images/instagram-svgrepo-com.svg"> </a>
+            <a class="logo"href="https://www.twitter.com/CoderCarter" target="_blank"> <img src="/images/Twitter-logo.svg"> </a>
+            <a class="logo"href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="/images/linkedin.svg"> </a>
+            <a class="logo"href="https://github.com/s-carter91" target="_blank"> <img src="/images/github-svgrepo-com.svg"> </a>
         </div>
     </section>
     <footer>
