--- a/src/html/aboutme.html
+++ b/src/html/aboutme.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/aboutme.css">
+    <link rel="icon" type="image/svg" href="/images/Sam-Face.svg">
     <title>About Me - Sam Carter</title>
 </head>
 <body>
@@ -23,6 +24,7 @@
             <h2>Interests and Hobbies</h2>
             <p>Apart from my interest in the ever evolving field of technology, I like to spend my spare time watching sport, gaming and travelling. The sporting competitions that really captivate me are Formula One, The National Basketball Association (NBA) and League of Legends (esports). There's nothing better than experiencing the live atmosphere at one of these sporting events. </p>
         </section>   
+        <!-- images with text that will appear on hover -->
         <section id="images">
             <div class="pic-container">
                 <img id="sam-ric" src="/images/sam-ric.png" alt="image of Sam and Daniel Ricciardo">
