--- a/src/html/bloghome.html
+++ b/src/html/bloghome.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/bloghome.css">
+    <link rel="icon" type="image/svg" href="/images/Sam-Face.svg">
     <title>Blog Articles</title>
 </head>
 <body>
@@ -17,7 +18,6 @@
     <main>
         <section id="blog-header">
             <header><h2>Welcome to the Blog Zone</h2></header>
-            <!-- <img src="/images/blog/images/879094-1.jpg" alt="simpsons image of blog users celebrating"> -->
             <aside id="blog-quote">
                 <p>"Religion, Family, Friendships. These are the three demons you must slay if you wish to
                 succeed in creating a successful blog" - <em>M Burns</em> <small> (kind of)</small></p>
