--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <!-- floating nav bar -->
         <nav class="top-nav">
             <a href="/html/professional-about-me.html">Projects</a>
             <a href="/html/aboutme.html">About me</a>
@@ -35,6 +36,7 @@
             </div>
         </nav>
     </main>
+    <!-- social media link section -->
     <section class="socials">
         <p>I welcome you to join me on my Web Developement journey</p>
         <div class="logo-container">
