--- a/src/html/contactme.html
+++ b/src/html/contactme.html
@@ -69,10 +69,10 @@
         <section class="socials">
         <p>Thank you for reaching out and don't forget to follow me using the below links:</p>
         <div class="logo-container">
-            <a class="logo"href="https://www.instagram.com/carter91" target="_blank"> <img src="/srcimages/instagram-svgrepo-com.svg"> </a>
-            <a class="logo"href="https://www.twitter.com/CoderCarter" target="_blank"> <img src="/srcimages/Twitter-logo.svg"> </a>
-            <a class="logo"href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="/srcimages/linkedin.svg"> </a>
-            <a class="logo"href="https://github.com/s-carter91" target="_blank"> <img src="/srcimages/github-svgrepo-com.svg"> </a>
+            <a class="logo"href="https://www.instagram.com/carter91" target="_blank"> <img src="/images/instagram-svgrepo-com.svg"> </a>
+            <a class="logo"href="https://www.twitter.com/CoderCarter" target="_blank"> <img src="/images/Twitter-logo.svg"> </a>
+            <a class="logo"href="https://www.linkedin.com/in/sam-carter-52b5ba235" target="_blank"> <img src="/images/linkedin.svg"> </a>
+            <a class="logo"href="https://github.com/s-carter91" target="_blank"> <img src="/images/github-svgrepo-com.svg"> </a>
         </div>
         </section>
     <footer>
